@@ -408,6 +408,19 @@ struct SCIP_ConflicthdlrData
 };
 
 
+/** type of enforcing/separation call */
+enum SCIP_enfosepatype
+{
+   SCIP_TYPE_ENFOLP      = 0,                /**< enforce LP */
+   SCIP_TYPE_ENFOPS      = 1,                /**< enforce pseudo solution */
+   SCIP_TYPE_ENFORELAX   = 2,                /**< enforce relaxation solution */
+   SCIP_TYPE_SEPALP      = 3,                /**< separate LP */
+   SCIP_TYPE_SEPARELAX   = 4,                /**< separate relaxation solution */
+   SCIP_TYPE_SEPASOL     = 5,                /**< separate relaxation solution */
+};
+typedef enum SCIP_enfosepatype SCIP_ENFOSEPATYPE;
+
+
 /* macro for parameters */
 #define SCIP_CALL_PARAM(x) /*lint -e527 */ do                                                   \
 {                                                                                               \
@@ -2766,6 +2779,7 @@ SCIP_RETCODE extendToCover(
    SCIP_CONSHDLRDATA*    conshdlrdata,       /**< constraint handler data */
    SCIP_LPI*             lp,                 /**< LP */
    SCIP_SOL*             sol,                /**< solution to be separated */
+   SCIP_ENFOSEPATYPE     enfosepatype,       /**< type of enforcing/separating type */
    SCIP_Bool             removable,          /**< whether cuts should be removable */
    SCIP_Bool             genlogicor,         /**< should logicor constraints be generated? */
    int                   nconss,             /**< number of constraints */
@@ -2959,6 +2973,7 @@ SCIP_RETCODE extendToCover(
 
          if ( genlogicor )
          {
+            SCIP_RESULT result;
             SCIP_CONS* cons;
             SCIP_VAR** vars;
             int cnt = 0;
@@ -3001,6 +3016,30 @@ SCIP_RETCODE extendToCover(
             SCIP_CALL( SCIPprintCons(scip, cons, NULL) );
             SCIPinfoMessage(scip, NULL, ";\n");
 #endif
+
+            /* enforce or separate logicor constraint to make sure that this has an effect in this round */
+            switch ( enfosepatype )
+            {
+            case SCIP_TYPE_ENFOLP:
+               SCIP_CALL( SCIPenfolpCons(scip, cons, FALSE, &result) );
+               break;
+            case SCIP_TYPE_ENFOPS:
+               SCIP_CALL( SCIPenfopsCons(scip, cons, FALSE, FALSE, &result) );
+               break;
+            case SCIP_TYPE_ENFORELAX:
+               SCIP_CALL( SCIPenforelaxCons(scip, cons, sol, FALSE, &result) );
+               break;
+            case SCIP_TYPE_SEPALP:
+               SCIP_CALL( SCIPsepalpCons(scip, cons, &result) );
+               break;
+            case SCIP_TYPE_SEPARELAX:
+            case SCIP_TYPE_SEPASOL:
+               SCIP_CALL( SCIPsepasolCons(scip, cons, sol, &result) );
+               break;
+            default:
+               SCIPerrorMessage("Wrong enforcing/separation type.\n");
+               SCIPABORT();
+            }
 
             SCIP_CALL( SCIPaddCons(scip, cons) );
             SCIP_CALL( SCIPreleaseCons(scip, &cons) );
@@ -3917,6 +3956,7 @@ SCIP_RETCODE enforceCuts(
    int                   nconss,             /**< number of constraints */
    SCIP_CONS**           conss,              /**< indicator constraints */
    SCIP_SOL*             sol,                /**< solution to be enforced */
+   SCIP_ENFOSEPATYPE     enfosepatype,       /**< type of enforcing/separating type */
    SCIP_Bool             genlogicor,         /**< whether logicor constraint should be generated */
    SCIP_Bool*            cutoff,             /**< whether we detected a cutoff by an infeasible inequality */
    int*                  nGen                /**< number of cuts generated */
@@ -3990,7 +4030,7 @@ SCIP_RETCODE enforceCuts(
 
    /* extend set S to a cover and generate cuts */
    error = FALSE;
-   SCIP_CALL( extendToCover(scip, conshdlr, conshdlrdata, lp, sol, conshdlrdata->removable, genlogicor, nconss, conss, S, &size, &value, &error, cutoff, &nCuts) );
+   SCIP_CALL( extendToCover(scip, conshdlr, conshdlrdata, lp, sol, enfosepatype, conshdlrdata->removable, genlogicor, nconss, conss, S, &size, &value, &error, cutoff, &nCuts) );
    *nGen = nCuts;
 
    /* return with an error if no cuts have been produced and and error occurred in extendToCover() */
@@ -4027,6 +4067,7 @@ SCIP_RETCODE enforceIndicators(
    int                   nconss,             /**< number of constraints */
    SCIP_CONS**           conss,              /**< indicator constraints */
    SCIP_SOL*             sol,                /**< solution to be enforced (NULL for LP solution) */
+   SCIP_ENFOSEPATYPE     enfosepatype,       /**< type of enforcing/separating type */
    SCIP_Bool             genlogicor,         /**< whether logicor constraint should be generated */
    SCIP_RESULT*          result              /**< result */
    )
@@ -4126,7 +4167,7 @@ SCIP_RETCODE enforceIndicators(
       SCIP_Bool cutoff;
       int ngen;
 
-      SCIP_CALL( enforceCuts(scip, conshdlr, nconss, conss, sol, genlogicor, &cutoff, &ngen) );
+      SCIP_CALL( enforceCuts(scip, conshdlr, nconss, conss, sol, enfosepatype, genlogicor, &cutoff, &ngen) );
       if ( cutoff )
       {
          conshdlrdata->niiscutsgen += ngen;
@@ -4214,6 +4255,7 @@ SCIP_RETCODE separateIISRounding(
    SCIP*                 scip,               /**< SCIP pointer */
    SCIP_CONSHDLR*        conshdlr,           /**< constraint handler */
    SCIP_SOL*             sol,                /**< solution to be separated */
+   SCIP_ENFOSEPATYPE     enfosepatype,       /**< type of enforcing/separating type */
    int                   nconss,             /**< number of constraints */
    SCIP_CONS**           conss,              /**< indicator constraints */
    int                   maxsepacuts,        /**< maximal number of cuts to be generated */
@@ -4361,7 +4403,8 @@ SCIP_RETCODE separateIISRounding(
       SCIP_CALL( fixAltLPVariables(scip, lp, nconss, conss, S) );
 
       /* extend set S to a cover and generate cuts */
-      SCIP_CALL( extendToCover(scip, conshdlr, conshdlrdata, lp, sol, conshdlrdata->removable, conshdlrdata->genlogicor, nconss, conss, S, &size, &value, &error, cutoff, &nCuts) );
+      SCIP_CALL( extendToCover(scip, conshdlr, conshdlrdata, lp, sol, enfosepatype, conshdlrdata->removable, conshdlrdata->genlogicor,
+            nconss, conss, S, &size, &value, &error, cutoff, &nCuts) );
 
       /* we ignore errors in extendToCover */
       if ( nCuts > 0 )
@@ -4628,6 +4671,7 @@ SCIP_RETCODE separateIndicators(
    int                   nusefulconss,       /**< number of useful constraints */
    SCIP_CONS**           conss,              /**< indicator constraints */
    SCIP_SOL*             sol,                /**< solution to be separated */
+   SCIP_ENFOSEPATYPE     enfosepatype,       /**< type of enforcing/separating type */
    SCIP_RESULT*          result              /**< result */
    )
 {
@@ -4743,7 +4787,7 @@ SCIP_RETCODE separateIndicators(
          *result = SCIP_DIDNOTFIND;
 
       /* start separation */
-      SCIP_CALL( separateIISRounding(scip, conshdlr, sol, nconss, conss, maxsepacuts, &cutoff, &ncuts) );
+      SCIP_CALL( separateIISRounding(scip, conshdlr, sol, enfosepatype, nconss, conss, maxsepacuts, &cutoff, &ncuts) );
       SCIPdebugMsg(scip, "Separated %d cuts from indicator constraints.\n", ncuts - noldcuts);
 
       if ( cutoff )
@@ -6053,7 +6097,7 @@ SCIP_DECL_CONSSEPALP(consSepalpIndicator)
    assert( result != NULL );
 
    /* perform separation */
-   SCIP_CALL( separateIndicators(scip, conshdlr, nconss, nusefulconss, conss, NULL, result) );
+   SCIP_CALL( separateIndicators(scip, conshdlr, nconss, nusefulconss, conss, NULL, SCIP_TYPE_SEPALP, result) );
 
    return SCIP_OKAY;
 }
@@ -6070,7 +6114,7 @@ SCIP_DECL_CONSSEPASOL(consSepasolIndicator)
    assert( result != NULL );
 
    /* perform separation */
-   SCIP_CALL( separateIndicators(scip, conshdlr, nconss, nusefulconss, conss, sol, result) );
+   SCIP_CALL( separateIndicators(scip, conshdlr, nconss, nusefulconss, conss, sol, SCIP_TYPE_SEPASOL, result) );
 
    return SCIP_OKAY;
 }
@@ -6098,7 +6142,7 @@ SCIP_DECL_CONSENFOLP(consEnfolpIndicator)
    conshdlrdata = SCIPconshdlrGetData(conshdlr);
    assert( conshdlrdata != NULL );
 
-   SCIP_CALL( enforceIndicators(scip, conshdlr, nconss, conss, NULL, conshdlrdata->genlogicor, result) );
+   SCIP_CALL( enforceIndicators(scip, conshdlr, nconss, conss, NULL, SCIP_TYPE_ENFOLP, conshdlrdata->genlogicor, result) );
 
    return SCIP_OKAY;
 }
@@ -6126,7 +6170,7 @@ SCIP_DECL_CONSENFORELAX(consEnforelaxIndicator)
    conshdlrdata = SCIPconshdlrGetData(conshdlr);
    assert( conshdlrdata != NULL );
 
-   SCIP_CALL( enforceIndicators(scip, conshdlr, nconss, conss, sol, conshdlrdata->genlogicor, result) );
+   SCIP_CALL( enforceIndicators(scip, conshdlr, nconss, conss, sol, SCIP_TYPE_ENFORELAX, conshdlrdata->genlogicor, result) );
 
    return SCIP_OKAY;
 }
@@ -6154,7 +6198,7 @@ SCIP_DECL_CONSENFOPS(consEnfopsIndicator)
       return SCIP_OKAY;
    }
 
-   SCIP_CALL( enforceIndicators(scip, conshdlr, nconss, conss, NULL, TRUE, result) );
+   SCIP_CALL( enforceIndicators(scip, conshdlr, nconss, conss, NULL, SCIP_TYPE_ENFOPS, TRUE, result) );
 
    return SCIP_OKAY;
 }
