@@ -61,6 +61,7 @@ Fixed bugs
 - Fixed MIN macro not defined in some cases.
 - Safeguard some API methods for querying solving statistics against segmentation faults after SCIPpresolve()
 - Fixed unfreed solution in concurrent solving
+- Make sure that logicor constraints are enforced/separated if genlogicor is true in cons_indicator.
 
 Miscellaneous
 -------------
